[project]
name = "fvctools"
version = "1.1.1"
description = "Flyvercity CLI Tools Suite"
authors = [
    { name = "Boris Resnick", email = "boris@flyver.city" }
]
dependencies = [
    "pyparsing>=3.2.0",
    "toolz>=1.0.0",
    "jsonschema>=4.23.0",
    "pygeodesy>=24.11.11",
    "scipy>=1.14.1",
    "pynmea2>=1.19.0",
    "python-dateutil>=2.9.0.post0",
    "gitpython>=3.1.43",
    "click>=8.1.7",
    "simplekml>=1.3.6",
    "pygments>=2.18.0",
    "boto3>=1.35.76",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
fvc = "fvc.tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fvc"]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "twine>=6.1.0",
]
